<resources>
    <string name="app_name">Ünite5 Gelişmiş Komutlar</string>


    <string name="uyg1">Uygulama 1</string>
    <string name="uyg2">Uygulama 2</string>
    <string name="uyg3">Uygulama 3</string>
    <string name="uyg4">Uygulama 4</string>
    <string name="uyg5">Uygulama 5</string>
    <string name="uyg6">Uygulama 6</string>
    <string name="uyg7">Uygulama 7</string>
    <string name="uyg8">Uygulama 8</string>
    <string name="uyg9">Uygulama 9</string>
    <string name="uyg10">Uygulama 10</string>
    <string name="uyg11">Uygulama 11</string>
    <string name="uyg12">Uygulama 12</string>
    <string name="uyg13">Uygulama 13</string>
    <string name="SS">Uygulama SS</string>
</resources>